# accessroute

./: CLAUDE.md  CONTRIBUTING.md  README.md
.github/workflows/: ai-server.yml  backend.yml  eas-update.yml  ios.yml  release.yml
ai-server/: Dockerfile  Dockerfile.cloudrun  Dockerfile.prod  benchmark.py  benchmark_quality.py  config.py  docker-compose.prod.yaml  docker-compose.yaml  load_test.py  model_manager.py  monitor.py  parser.py  pyproject.toml  requirements-cloudrun.txt  requirements.txt  server.py
ai-server/deploy/: FAILOVER.md  accessroute-ai.service  nginx.conf
ai-server/prompts/: chat_system.txt  extract_needs_system.txt
ai-server/scripts/: healthcheck.sh  quantize.py
ai-server/test_data/: expected_outputs.json  test_conversations.json
ai-server/tests/: conftest.py  test_edge_cases.py  test_parser.py  test_prompts.py  test_server.py  test_streaming.py
backend/: .firebaserc  firebase.json  firestore.indexes.json  firestore.rules
backend/functions/: .eslintrc.js  .prettierrc  jest.config.js  package-lock.json  package.json  tsconfig.json
docs/: SPEC_DETAILED.md  SPEC_SUMMARY.md  accessibility-checklist.md  ai-api-spec.yaml  api-spec.yaml  api-usage-examples.md  appstore-metadata.md  appstore-review-notes.md  data-models.ts  faq.md  release-checklist.md  release-notes-v1.0.md  screenshot-texts.md  setup-guide.md  user-guide.md
ios/: .swiftlint.yml  ExportOptions.plist
mobile/: .env.example  app.json  eas.json  jest.config.js  package-lock.json  package.json
presentation/: package-lock.json  slides.html  to-pdf.mjs  to-pdf.ps1
(+105 files in other folders)
